working on new ui styles

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -1557,7 +1557,7 @@ LoginUsuarioForgotBtn=Reestablecer contrase\u00f1a
 ForgotMsg=Al Reestablecer la contrase\u00f1a ud. recibir\u00e1 una contrase\u00f1a nueva en su correo electronico registrado en el sistema. Se recomienda cambiarla.
 LoginTitle=Accede a tu cuenta GoDesk
 CerrarCaso=\u00bfEst\u00e1 seguro que quiere cerrar el caso?
-ReabrirCaso=\u00bfEst\u00e1 seguro que quiere reabrir el caso?
+ReabrirCaso=\u00bfEst\u00e1 seguro de re-abrir el caso?
 EliminarCaso=\u00bfEst\u00e1 seguro que desea eliminar el caso?
 ListClienteTitle=List
 ListClienteEmpty=(No Cliente Items Found)
