working on new ui styles

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -37,6 +37,7 @@ cambiarSLA=Proximo vencimiento
 adjuntarArchivosARespuesta=Adjuntar Archivos
 cambiarSubEstado=Cambiar Estado del caso
 inbox=/script/index.xhtml
+EntityExistsError=Error, ya existe un objeto con el mismo identificador.
 PersistenceErrorOccured=Lo sentimos, ha ocurrido un error interno, favor notificar de este problema al administrador.
 Previous=Anterior
 Next=Siguiente
