working on new ui styles

--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -6,7 +6,7 @@
 #============================================================================
 
 #org.quartz.scheduler.instanceName = BrotecIcafal_Scheduler
-org.quartz.scheduler.instanceName = Godesk_Quartz_Scheduler
+org.quartz.scheduler.instanceName = Godesk_Scheduler
 org.quartz.scheduler.instanceId = AUTO
 
 #============================================================================
