--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -48,7 +48,7 @@ org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.PostgreSQ
 #are with serializing your non-String classes into a BLOB.
 org.quartz.jobStore.useProperties = true
 #============================================================================
-org.quartz.jobStore.dataSource = godeskds
+org.quartz.jobStore.dataSource = godesk_quartz_ds
 #org.quartz.jobStore.nonManagedTXDataSource = nonManagedTxDs
 org.quartz.jobStore.tablePrefix = QRTZ_
 
@@ -60,15 +60,15 @@ org.quartz.jobStore.clusterCheckinInterval = 60000
 # Configure Datasources  
 #============================================================================
 #Multitenant
-org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk
+org.quartz.dataSource.godesk_quartz_ds.jndiURL=jdbc/godesk_quartz
 #org.quartz.dataSource.nonManagedTxDs.jndiURL=jdbc/brotecnonManagedTXDS
 #brotec ds
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/brotec
+#org.quartz.dataSource.godesk_quartz_ds.jndiURL=jdbc/brotec
 #godesk ds
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/godesk_db_ds
+#org.quartz.dataSource.godesk_quartz_ds.jndiURL=jdbc/godesk_db_ds
 #beltec ds
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/beltec
+#org.quartz.dataSource.godesk_quartz_ds.jndiURL=jdbc/beltec
 #monte-elqui ds
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/monte_elqui
+#org.quartz.dataSource.godesk_quartz_ds.jndiURL=jdbc/monte_elqui
 #betterlife
-#org.quartz.dataSource.godeskds.jndiURL=jdbc/betterlife
+#org.quartz.dataSource.godesk_quartz_ds.jndiURL=jdbc/betterlife
