fixing tipo casos management

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -2730,7 +2730,7 @@ ListTipoCasoDestroyLink=Eliminar
 ListTipoCasoEditLink=Editar
 ListTipoCasoViewLink=Ver
 ListTipoCasoCreateLink=Crear Nuevo Tipo de Caso
-ListTipoCasoTitle_idTipoCaso=Id Tipo de Caso
+ListTipoCasoTitle_idTipoCaso=Id
 ListTipoCasoTitle_nombre=Nombre
 ListTipoCasoTitle_descripcion=Descripcion
 
